Setting the AIS Message 21 second field